added a self-signed certificate to ingress controller and enabled https for the app, also provisioning should be idempotent

--- a/VM/k8s/ingress.yaml
+++ b/VM/k8s/ingress.yaml
@@ -7,6 +7,10 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   ingressClassName: nginx
+  tls:
+    - hosts:
+        - team18.local
+      secretName: team18-tls
   rules:
     - host: team18.local
       http:
