--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 services:
   app:
-    image: ghcr.io/remla25-team18/app:0.0.12
+    image: ghcr.io/remla25-team18/app:0.0.19
     container_name: app_container
     ports:
       - "4200:4200"
     depends_on:
       - model-service
     environment:
-      - MODEL_SERVICE_URL=model-service
-      - MODEL_SERVICE_PORT=5050
+      - DNS=model-service
+      - MODEL_PORT=5050
     networks:
       - app-network
 
   model-service:
-    image: ghcr.io/remla25-team18/model-service:1.0.1
-    container_name: model_container
+    container_name: model_service_container
+    image: ghcr.io/remla25-team18/model-service:1.0.3
     ports:
       - "5050:5050"
     networks:
