--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
   model-service:
     container_name: model_service_container
     image: ghcr.io/remla25-team18/model-service:1.0.3
+    environment:
+      - MODEL_SERVICE_PORT=5050
     ports:
       - "5050:5050"
     networks:
