--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,8 +17,8 @@ services:
     image: ghcr.io/remla25-team18/model-service:1.0.3
     environment:
       - MODEL_SERVICE_PORT=5050
-    ports:
-      - "5050:5050"
+    expose:
+      - "5050" # Internal only
     networks:
       - app-network
 
