--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ services:
   app:
     image: ghcr.io/remla25-team18/app:0.0.19
     container_name: app_container
+    restart: unless-stopped # Restart Policy: Restart unless explicitly stopped (best for development/production)
     ports:
       - "4200:4200"
     depends_on:
@@ -15,6 +16,7 @@ services:
   model-service:
     container_name: model_service_container
     image: ghcr.io/remla25-team18/model-service:1.0.3
+    restart: unless-stopped
     environment:
       - MODEL_SERVICE_PORT=5050
     expose:
