--- a/VM/provisioning/ansible/finalization.yml
+++ b/VM/provisioning/ansible/finalization.yml
@@ -64,3 +64,19 @@
 
     - name: Apply Ingress for Kubernetes Dashboard
       command: kubectl apply -f /vagrant/provisioning/manifests/dashboard/dashboard-ingress.yml
+
+    # Enabling Prometheus
+    - name: Add Prometheus Community Helm repo
+      ansible.builtin.shell: helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
+      environment:
+        KUBECONFIG: /home/vagrant/.kube/config
+
+    - name: Update Helm repos
+      ansible.builtin.shell: helm repo update
+      environment:
+        KUBECONFIG: /home/vagrant/.kube/config
+
+    - name: Install kube-prometheus-stack (includes Prometheus Operator)
+      ansible.builtin.shell: helm install prometheus-operator prometheus-community/kube-prometheus-stack --namespace monitoring --create-namespace
+      environment:
+        KUBECONFIG: /home/vagrant/.kube/config
