changed to yaml

--- a/VM/provisioning/ansible/finalization.yml
+++ b/VM/provisioning/ansible/finalization.yml
@@ -64,3 +64,15 @@
 
     - name: Apply Ingress for Kubernetes Dashboard
       command: kubectl apply -f /vagrant/provisioning/manifests/dashboard/dashboard-ingress.yml
+
+    # Other tasks
+    - name: Ensure team18-tls secret exists (recreate if needed)
+      shell: |
+        if kubectl get secret team18-tls &>/dev/null; then
+          kubectl delete secret team18-tls
+        fi
+        kubectl create secret tls team18-tls \
+          --cert=/vagrant/tls/tls.crt \
+          --key=/vagrant/tls/tls.key
+      args:
+        executable: /bin/bash
